# scratch_plugin

./: README  configure.ac
plugin/: se.fluffware.scratch.device.json  se.fluffware.scratch.device.json.in
src/: Makefile.am  Makefile.win  ScratchDeviceHost.json  config_file.c  config_file.h  debug.h  json_parse.c  json_parse.h  main.c  main_unix.c  main_win.c  native_message.c  native_message.h  scratch_protocol.c  scratch_protocol.h  send_req.py  serial.c  serial.h  serial_unix.c  serial_unix.h
